branches/wip/Archive/04d4dd3f3fbf4fde61087f23a4cc89a4-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:25:14: error: no matching function for call to 'C::C(<brace-enclosed initializer list>)'
     C c3{{c2}};
              ^
main.cpp:25:14: note: candidates are:
main.cpp:18:5: note: C::C(const C&)
     C(const C&) { cout << "C(const C&)" << endl; }
     ^
main.cpp:18:5: note:   no known conversion for argument 1 from '<brace-enclosed initializer list>' to 'const C&'
main.cpp:17:5: note: C::C(B)
     C(B) { cout << "C(B)" << endl; }
     ^
main.cpp:17:5: note:   no known conversion for argument 1 from '<brace-enclosed initializer list>' to 'B'
